--- a/r_01_start.html
+++ b/r_01_start.html
@@ -13,16 +13,35 @@
         font-size: 12pt;
         line-height: 20pt;
         font-weight: 300;
+        background-color: lightblue;
       }
       
       h1, h2, h3, h4, h5, h6 {
         font-weight: 400;
       }
       
-      @media only screen and (min-width: 768px) {
+      @media only screen and (min-width: 780px) {
         body {
           max-width: 800px;
           background-color: red;
+        }
+      }
+      @media only screen and (min-width: 820px) {
+        body {
+          max-width: 800px;
+          background-color: orange;
+        }
+      }
+      @media only screen and (min-width: 860px) {
+        body {
+          max-width: 800px;
+          background-color: yellow;
+        }
+      }
+      @media only screen and (min-width: 900px) {
+        body {
+          max-width: 800px;
+          background-color: green;
         }
       }
     </style>
