--- a/r_01_start.html
+++ b/r_01_start.html
@@ -13,17 +13,17 @@
         font-size: 12pt;
         line-height: 20pt;
         font-weight: 300;
-        background-color: lightblue;
+        background-color: blue;
       }
       
       h1, h2, h3, h4, h5, h6 {
         font-weight: 400;
       }
       
-      @media only screen and (min-width: 980px) {
+      @media only screen and (min-width: 1000px) {
         body {
           max-width: 800px;
-          background-color: yellow;
+          background-color: pink;
         }
       }
     </style>
