--- a/r_00.html
+++ b/r_00.html
@@ -15,6 +15,13 @@
         font-weight: 300;
       }
       
+      p {
+        font-family: 'Montserrat', Arial;
+        font-size: 1em;
+        line-height: 1.6em;
+        font-weight: 300;
+      }
+      
       h1, h2, h3, h4, h5, h6 {
         font-weight: 400;
         margin-inline-start: 0pt;
