--- a/r_00.html
+++ b/r_00.html
@@ -96,6 +96,7 @@
         justify-content: space-between;
         width: 94vw;
         height: 3em;
+        font-size: 1em;
       }
       
       .page_top::before{
