--- a/r_00.html
+++ b/r_00.html
@@ -140,6 +140,10 @@
         border-left: 1px solid #ffffff40;
       }
       
+      .nav_list li {
+        padding: 0.2em 0;
+      }
+      
       .nav_list a {
         color: white;
         text-decoration: none;
