--- a/r_00.html
+++ b/r_00.html
@@ -11,7 +11,7 @@
         width: 94vw;
         margin: 0 auto;
         font-family: 'Montserrat', Arial;
-        font-size: 12pt;
+        font-size: 5vw;
         line-height: 1.6em;
         font-weight: 300;
       }
@@ -23,6 +23,7 @@
         align-items: center;
         justify-content: space-between;
         width: 94vw;
+        margin: 0 auto;
         height: 3em;
         font-size: 1em;
       }
@@ -30,7 +31,7 @@
       .page_top::before{
         content: "";
         height: 3em;
-        width: 100vw;
+        width: 100%;
         left: 0;
         top: 0;
         position: fixed;
@@ -192,7 +193,7 @@
     
     <div style="height:3em;"></div>
 
-    <p>2021-05-11 15:38:47</p>
+    <p>2021-05-11 15:45:00</p>
     <p>This is a block of text to test the page layout. This is a block of text to test the page layout. This is a block of text to test the page layout. This is a block of text to test the page layout. This is a block of text to test the page layout.</p>
     <div id="heading-1" class="section level1">
     <h1>Heading 1</h1>
