--- a/r_00.html
+++ b/r_00.html
@@ -24,7 +24,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        width: 96%;
+        width: 96vw;
         margin: 0 auto;
         height: 40pt;
         font-size: 16pt;
@@ -33,7 +33,7 @@
       .page_top::before{
         content: "";
         height: 40pt;
-        width: 100%;
+        width: 100vw;
         left: 0;
         top: 0;
         position: fixed;
@@ -206,7 +206,7 @@
     
     <div style="height:40pt;"></div>
 
-    <p>2021-05-12 08:56:00</p>
+    <p>2021-05-12 08:59:02</p>
     <p>This is a block of text to test the page layout. This is a block of text to test the page layout. This is a block of text to test the page layout. This is a block of text to test the page layout. This is a block of text to test the page layout.</p>
     <div id="heading-1" class="section level1">
     <h1>Heading 1</h1>
