--- a/r_01.html
+++ b/r_01.html
@@ -254,7 +254,7 @@
         <!-- li><a href="index.html" class="subtle">Preface</a></li>
         <!-- li><a href="r_01.html"><span class="mono subtle">01.</span> Getting started</a></li-->
         <!-- li><a href="r_02.html"><span class="mono subtle">02.</span> Data</a></li-->
-        <li><a href="about.html" class="subtle">About</a></li>
+        <li><a href="index.html" class="subtle">About</a></li>
         <li>
           <div class="icon_holder">
           <a class="icon subtle" target="_blank" title="Twitter" href="https://twitter.com/griffinevo"><i class="fab fa-twitter"></i></a>
@@ -350,7 +350,7 @@
     </div>
     </div>
 
-    <div style="padding: 160pt 0 20pt 0; color:#00000030; bottom: 0;">Last Updated 2021-05-18 13:43:30</div>
+    <div style="padding: 160pt 0 20pt 0; color:#00000030; bottom: 0;">Last Updated 2021-05-18 14:43:48</div>
   </body> 
   
   <script>
