--- a/r_preface.html
+++ b/r_preface.html
@@ -254,7 +254,7 @@
         <!-- li><a href="index.html" class="subtle">Preface</a></li>
         <!-- li><a href="r_01.html"><span class="mono subtle">01.</span> Getting started</a></li-->
         <!-- li><a href="r_02.html"><span class="mono subtle">02.</span> Data</a></li-->
-        <li><a href="about.html" class="subtle">About</a></li>
+        <li><a href="index.html" class="subtle">About</a></li>
         <li>
           <div class="icon_holder">
           <a class="icon subtle" target="_blank" title="Twitter" href="https://twitter.com/griffinevo"><i class="fab fa-twitter"></i></a>
@@ -276,7 +276,7 @@
     <p>This site is a collection of notes on the R programming language. These notes are targeted at novice users, aiming to equip them with the skills needed to begin programming in R and to understand how R works. A strong understanding of the fundamentals of the R language will help programmers advance quickly and become able to solve issues independently. R is useful to a wide variety of tasks in data science and learning how to find a solution is key to becoming a proficient and effective programmer.</p>
     </div>
 
-    <div style="padding: 160pt 0 20pt 0; color:#00000030; bottom: 0;">Last Updated 2021-05-18 13:43:38</div>
+    <div style="padding: 160pt 0 20pt 0; color:#00000030; bottom: 0;">Last Updated 2021-05-18 14:43:56</div>
   </body> 
   
   <script>
