--- a/about.html
+++ b/about.html
@@ -254,7 +254,7 @@
         <!-- li><a href="index.html" class="subtle">Preface</a></li>
         <!-- li><a href="r_01.html"><span class="mono subtle">01.</span> Getting started</a></li-->
         <!-- li><a href="r_02.html"><span class="mono subtle">02.</span> Data</a></li-->
-        <li><a href="about.html" class="subtle">About</a></li>
+        <li><a href="index.html" class="subtle">About</a></li>
         <li>
           <div class="icon_holder">
           <a class="icon subtle" target="_blank" title="Twitter" href="https://twitter.com/griffinevo"><i class="fab fa-twitter"></i></a>
@@ -281,7 +281,7 @@
     <p>Outside of work, I am a keen cyclist and runner, follow several sports and spend time with my three young children and partner, with lots of time spent enjoying Sweden’s incredible outdoor space.</p>
     </div>
 
-    <div style="padding: 160pt 0 20pt 0; color:#00000030; bottom: 0;">Last Updated 2021-05-18 13:43:22</div>
+    <div style="padding: 160pt 0 20pt 0; color:#00000030; bottom: 0;">Last Updated 2021-05-18 14:43:40</div>
   </body> 
   
   <script>
