--- a/about.html
+++ b/about.html
@@ -307,6 +307,7 @@
     </div>
     <p>I am a statistical programmer at AstraZeneca, based in Sweden. I joined AstraZeneca in 2020 following a career in academia. It was through my academic career, where I used R on a daily basis, that I developed a passion for programming. Towards the end of my time in academia and aiming for a career shift into programming, I worked on learning more about programming and more programming languages. This included self-teaching the basics of HTML, CSS, JavaScript, Java/Kotlin, XML, SAS and LaTeX. Since joining AstraZeneca on the Late Respiratory and Immunology Biometrics Graduate Program, I have further developed skills in SAS, clinical programming in general, clinical data standards (CDISC) and a number of important “soft skills”.</p>
     <p>My research in academia was focused on the evolution of sex differences. I used methods from quantitative genetics - a field that applies multivariate statistical approaches to provide an estimate the underlying genetic architecture of traits - to assess the constraint on the evolution of sex differences, and how the evolution of sex differences is influenced by sex chromosomes, environmental change and mutation. You can read more in my <a href="http://www.diva-portal.org/smash/get/diva2:842941/FULLTEXT01.pdf">PhD thesis</a> and <a href="https://scholar.google.com/citations?user=w0uVTwIAAAAJ&amp;hl=en">research papers</a>.</p>
+    <p>Outside of work I am a keen cyclist and runner, and follow sports including football and cricket. Much of my spare time is spent with my three young children - Nils, Olof and Sven - and my partner. We tend toward outdoor activities and try to get out year-round, enjoying the forests and lakes in the spring and summer, mushroom and berry picking in the autumn, and skiing and sledding in the winter.</p>
     <div class="deck">
     <div class="card">
     <h3 id="employment">Employment</h3>
@@ -351,7 +352,7 @@
     </div>
     </div>
 
-    <div style="padding: 160pt 0 20pt 0; color:#00000030; bottom: 0;">Last Updated 2021-05-19 09:00:50</div>
+    <div style="padding: 160pt 0 20pt 0; color:#00000030; bottom: 0;">Last Updated 2021-05-19 09:48:05</div>
   </body> 
   
   <script>
