--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
         
         <li class="accordion"><a>Intro to R</a></li>
         <div class="panel" style="border-bottom: none;">
-          <li><a href="r_preface.html"><span class="mono subtle">00.</span> Preface</a></li>
-          <li><a href="r_01.html"><span class="mono subtle">01.</span> Getting started</a></li>
-          <li><a href="r_02.html"><span class="mono subtle">02.</span> Data</a></li>
+          <!--li><a href="r_preface.html"><span class="mono subtle">00.</span> Preface</a></li-->
+          <!--li><a href="r_01.html"><span class="mono subtle">01.</span> Getting started</a></li-->
+          <!--li><a href="r_02.html"><span class="mono subtle">02.</span> Data</a></li-->
         </div>
         
         <li><a href="index.html">About</a></li>
@@ -382,7 +382,7 @@
     </div>
     </div>
 
-    <div style="padding: 160pt 0 20pt 0; color:#00000040; bottom: 0;">Last Updated 2021-05-20 13:25:03</div>
+    <div style="padding: 160pt 0 20pt 0; color:#00000040; bottom: 0;">Last Updated 2021-05-20 15:47:52</div>
   </body> 
   
   <script>
