--- a/r_preface.html
+++ b/r_preface.html
@@ -301,9 +301,9 @@
         
         <li class="accordion"><a>Intro to R</a></li>
         <div class="panel" style="border-bottom: none;">
-          <li><a href="r_preface.html"><span class="mono subtle">00.</span> Preface</a></li>
-          <li><a href="r_01.html"><span class="mono subtle">01.</span> Getting started</a></li>
-          <li><a href="r_02.html"><span class="mono subtle">02.</span> Data</a></li>
+          <!--li><a href="r_preface.html"><span class="mono subtle">00.</span> Preface</a></li-->
+          <!--li><a href="r_01.html"><span class="mono subtle">01.</span> Getting started</a></li-->
+          <!--li><a href="r_02.html"><span class="mono subtle">02.</span> Data</a></li-->
         </div>
         
         <li><a href="index.html">About</a></li>
@@ -334,7 +334,7 @@
 
     <p>This site is a collection of notes on the R programming language. These notes are targeted at novice users, aiming to equip them with the skills needed to begin programming in R and to understand how R works. A strong understanding of the fundamentals of the R language will help programmers advance quickly and become able to solve issues independently. R is useful to a wide variety of tasks in data science and learning how to find a solution is key to becoming a proficient and effective programmer.</p>
 
-    <div style="padding: 160pt 0 20pt 0; color:#00000040; bottom: 0;">Last Updated 2021-05-20 13:25:19</div>
+    <div style="padding: 160pt 0 20pt 0; color:#00000040; bottom: 0;">Last Updated 2021-05-20 15:48:07</div>
   </body> 
   
   <script>
