--- a/about.html
+++ b/about.html
@@ -352,12 +352,12 @@
     <p><span class="desk_only">January</span> 2019 - <span class="desk_only">August</span> 2020</p>
     </div>
     <div class="role">
-    <p><strong>Postdoctoral Research Fellow</strong></p>
+    <p><strong>Postdoctoral Researcher</strong></p>
     <p>Uppsala University<span class="desk_only">, Sweden</span></p>
     <p><span class="desk_only">September</span> 2018 - <span class="desk_only">September</span> 2020</p>
     </div>
     <div class="role">
-    <p><strong>Postdoctoral Research Fellow</strong></p>
+    <p><strong>Postdoctoral Researcher</strong></p>
     <p>University of Turku<span class="desk_only">, Finland</span></p>
     <p><span class="desk_only">March</span> 2016 - <span class="desk_only">August</span> 2018</p>
     </div>
@@ -365,24 +365,24 @@
     <div class="card">
     <h3 id="education">Education</h3>
     <div class="role">
-    <p><strong>PhD in Evolutionary Genetics</strong></p>
+    <p><strong>PhD, Evolutionary Genetics</strong></p>
     <p>Uppsala University<span class="desk_only">, Sweden</span></p>
     <p><span class="desk_only">September</span> 2011 - <span class="desk_only">September</span> 2015</p>
     </div>
     <div class="role">
-    <p><strong>MSc Evolutionary and Behavioural Ecology</strong></p>
+    <p><strong>MSc, Evolutionary <span class="desk_only">and Behavioural</span> Ecology</strong></p>
     <p>University of Exeter<span class="desk_only">, UK</span></p>
     <p><span class="desk_only">October</span> 2010 - <span class="desk_only">August</span> 2011</p>
     </div>
     <div class="role">
-    <p><strong>BSc Conservation Biology and Ecology</strong></p>
+    <p><strong>BSc, Conservation Biology <span class="desk_only">and Ecology</span></strong></p>
     <p>University of Exeter<span class="desk_only">, UK</span></p>
     <p><span class="desk_only">September</span> 2007 - <span class="desk_only">July</span> 2010</p>
     </div>
     </div>
     </div>
 
-    <div style="padding: 160pt 0 20pt 0; color:#00000040; bottom: 0;">Last Updated 2021-05-21 09:34:16</div>
+    <div style="padding: 160pt 0 20pt 0; color:#00000040; bottom: 0;">Last Updated 2021-05-21 09:44:50</div>
   </body> 
   
   <script>
