--- a/indexA.html
+++ b/indexA.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <img class="profile" src="IMAGES/profileDummy.jpg"></img>
+    <img class="profile" src="profileDummy.jpg"></img>
     <h1>A. Student</h1>
     <p>Role, Company</p>
     <h1>Key Skills</h1>
