--- a/indexA.html
+++ b/indexA.html
@@ -4,39 +4,63 @@
 
   <head>
     <title>Home</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="GriffinEvo">
+    <meta name="keywords" content="R, RStats, Statistical Programming">
+    <meta name="author" content="Rob Griffin">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
-    <img class="profile" src="profileDummy.jpg"></img>
-    <h1>A. Student</h1>
-    <p>Role, Company</p>
+
+    <div class="pageHead">
+      <h1>Rob Griffin, PhD</h1>
+      <div>Menu</div>
+    </div>
+
+    <div class="pagePad"></div>
+
+    <img class="profile" src="IMAGES/robGriffin.jpg"></img>
+
+
     <h1>Key Skills</h1>
     <ul>
-      <li>Skill 1</li>
-      <li>Skill 2</li>
-      <li>Skill 3</li>
+      <li>Statistical programming with <em>R</em> and <em>SAS</em></li>
+      <li><em>Java</em>, <em>HTML</em> and <em>CSS</em></li>
+      <li>Data processing, visualisation and analysis</li>
     </ul>
+
+
     <h1>Profile</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>
+      Statistical programmer in pharmaceuticals with a background in academic research.
+      PhD in evolutionary genetics from Uppsala University followed by postdoctoral poisitons in Sweden, Finland and Australia.
+      Transitioned into the private sector to pursue interest in statisitcal programming with <em>R</em> and programming in general.
+    </p>
+
+    <p>
+      Currently part of the AstraZeneca Late R&I Biometrics Graduate Program as a programmer.
+      Developing skills as a programmer through work-based training, private courses and practice in my free time.
+    </p>
+
+    <p>
+      Interests in a number of sports including cycling, football, running, cross-country skiing and squash.
+      Most of my free time is spent with my partner and our three small children (Nils, Olof and Sven) enjoying the Swedish countryside.
+    </p>
+
 
     <!-- Navigation Menu -->
     <ul class="navList">
       <li><a href="#" class="navLink">Home</a></li>
       <li><a href="#" class="navLink">CV</a></li>
-      <!--
-      <li><a href="#">R</a></li>
-      <ul>
-        <li><a href="#">The R Language</a></h1></li>
-        <li><a href="#">Data Structures and Types</a></h1></li>
-      </ul>
-      -->
+
       <li class="iconContainer">
-        <a href="https://twitter.com/griffinevo" target="_blank" class="fa fa-twitter navLink"></a>
-        <a href="#" target="_blank" class="fa fa-linkedin navLink"></a>
-        <a href="#" target="_blank" class="fa fa-github navLink"></a>
+        <a href="https://twitter.com/griffinevo" target="_blank" class="fa fa-twitter-square navLink"></a>
+        <a href="#" target="_blank" class="fa-linkedin-square navLink fa"></a>
+        <a href="#" target="_blank" class="fa fa-github-square navLink"></a>
+        <a href="mailto:robgriffin247@hotmail.com" class="fa fa-envelope-square navLink"></a>
       </li>
     </ul>
   </body>
