--- a/indexA.html
+++ b/indexA.html
@@ -27,9 +27,9 @@
 
     <h1>Key Skills</h1>
     <ul>
-      <li>Statistical programming with <em>R</em> and <em>SAS</em></li>
-      <li><em>Java</em>, <em>HTML</em> and <em>CSS</em></li>
-      <li>Data processing, visualisation and analysis</li>
+      <li><span class="deskOnly">Statistical programming with </span><em>R</em> and <em>SAS</em><span class="mobOnly"> for stats</span></li>
+      <li><span class="deskOnly">Experience and training in </span><em>Java</em>, <em>HTML</em> and <em>CSS</em></li>
+      <li><span class="mobOnly">Data science and statistics</span><span class="deskOnly">Data processing, analysis and visualisation</span></li>
     </ul>
 
 
