--- a/indexA.html
+++ b/indexA.html
@@ -15,23 +15,41 @@
 
   <body>
 
-    <div class="pageHead">
-      <h1>Rob Griffin, PhD</h1>
-      <div>Menu</div>
+    <!-- Navigation Menu -->
+    <div id="navPane">
+      <ul class="navList">
+        <li><a href="#" class="navLink">Home</a></li>
+        <li><a href="#" class="navLink">CV</a></li>
+        <li><a href="#" class="navLink">Publications</a></li>
+
+        <li class="iconContainer">
+          <a href="https://twitter.com/griffinevo" target="_blank" class="fa fa-twitter-square navLink"></a>
+          <a href="#" target="_blank" class="fa-linkedin-square navLink fa"></a>
+          <a href="#" target="_blank" class="fa fa-github-square navLink"></a>
+          <a href="mailto:robgriffin247@hotmail.com" class="fa fa-envelope-square navLink"></a>
+        </li>
+      </ul>
     </div>
 
+    <div class="pageHead">
+      <h1>Rob Griffin, PhD</h1>
+      <div id="menuOpen"  onclick="openNav()">Menu</div>
+      <div id="menuClose" onclick="closeNav()">Close</div>
+    </div>
+    <div id="overlay"></div>
     <div class="pagePad"></div>
 
-    <img class="profile" src="IMAGES/robGriffin.jpg"></img>
-
-
-    <h1>Key Skills</h1>
-    <ul>
-      <li><span class="deskOnly">Statistical programming with </span><em>R</em> and <em>SAS</em><span class="mobOnly"> for stats</span></li>
-      <li><span class="deskOnly">Experience and training in </span><em>Java</em>, <em>HTML</em> and <em>CSS</em></li>
-      <li><span class="mobOnly">Data science and statistics</span><span class="deskOnly">Data processing, analysis and visualisation</span></li>
-    </ul>
-
+    <div class="flexDesk">
+      <img class="profile" src="IMAGES/robGriffin.jpg"></img>
+      <div class="flexDeskComponent">
+        <h1>Key Skills</h1>
+        <ul>
+          <li><span class="deskOnly">Statistical programming with </span><em>R</em> and <em>SAS</em><span class="mobOnly"> for stats</span></li>
+          <li><span class="deskOnly">Experience and training in </span><em>Java</em>, <em>HTML</em> and <em>CSS</em></li>
+          <li><span class="mobOnly">Data science and statistics</span><span class="deskOnly">Data processing, analysis and visualisation</span></li>
+        </ul>
+      </div>
+    </div>
 
     <h1>Profile</h1>
     <p>
@@ -50,19 +68,24 @@
       Most of my free time is spent with my partner and our three small children (Nils, Olof and Sven) enjoying the Swedish countryside.
     </p>
 
-
-    <!-- Navigation Menu -->
-    <ul class="navList">
-      <li><a href="#" class="navLink">Home</a></li>
-      <li><a href="#" class="navLink">CV</a></li>
-
-      <li class="iconContainer">
-        <a href="https://twitter.com/griffinevo" target="_blank" class="fa fa-twitter-square navLink"></a>
-        <a href="#" target="_blank" class="fa-linkedin-square navLink fa"></a>
-        <a href="#" target="_blank" class="fa fa-github-square navLink"></a>
-        <a href="mailto:robgriffin247@hotmail.com" class="fa fa-envelope-square navLink"></a>
-      </li>
-    </ul>
   </body>
+
+  <script>
+    function openNav() {
+      document.getElementById("navPane").style.width = "450px";
+      document.getElementById("menuClose").style.display = "inline";
+      document.getElementById("menuOpen").style.display = "none";
+      document.getElementById("overlay").style.backgroundColor = "#00000070";
+      document.getElementById("overlay").style.zIndex = "2";
+    }
+
+    function closeNav() {
+      document.getElementById("navPane").style.width = "0";
+      document.getElementById("menuOpen").style.display = "inline";
+      document.getElementById("menuClose").style.display = "none";
+      document.getElementById("overlay").style.backgroundColor = "#00000000";
+      document.getElementById("overlay").style.zIndex = "-2";
+    }
+  </script>
 
 </html>
