--- a/indexA.html
+++ b/indexA.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="pageHead">
-      <h1>Rob Griffin, PhD</h1>
+      <h1>Rob Griffin</h1>
       <div id="menuOpen"  onclick="openNav()">Menu</div>
       <div id="menuClose" onclick="closeNav()">Close</div>
     </div>
@@ -51,16 +51,16 @@
       </div>
     </div>
 
-    <h1>Profile</h1>
+    <h1>About</h1>
     <p>
       Statistical programmer in pharmaceuticals with a background in academic research.
-      PhD in evolutionary genetics from Uppsala University followed by postdoctoral poisitons in Sweden, Finland and Australia.
-      Transitioned into the private sector to pursue interest in statisitcal programming with <em>R</em> and programming in general.
+      PhD in evolutionary genetics from Uppsala University (2011-2015) followed by postdoctoral positons in Sweden, Finland and Australia.
+      Moved into the private sector to pursue interest in programming and statistics in 2020.
     </p>
 
     <p>
       Currently part of the AstraZeneca Late R&I Biometrics Graduate Program as a programmer.
-      Developing skills as a programmer through work-based training, private courses and practice in my free time.
+      Developing skills as a programmer through work-based training, private courses and practice in my free time, including the <em>Java</em>, <em>Python</em>, <em>C++</em> and <em>JavaScript</em> languages.
     </p>
 
     <p>
