--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,7 @@
 <html>
 
   <head>
-    <title>Home</title>
+    <title>CV</title>
     <meta charset="UTF-8">
     <meta name="description" content="GriffinEvo">
     <meta name="keywords" content="R, RStats, Statistical Programming">
@@ -33,7 +33,7 @@
     </div>
 
     <div class="pageHead">
-      <h1>GriffinEvo: <span class="hi1">Home</span></h1>
+      <h1>GriffinEvo: <span class="hi1">CV</span></h1>
       <div id="menuOpen"  onclick="openNav()">Menu</div>
       <div id="menuClose" onclick="closeNav()">Close</div>
     </div>
@@ -43,15 +43,22 @@
 
 
     <div class="section">
-      <h1>Rob Griffin, PhD</h1>
-      <div class="flexBox">
-        <img class="profile" src="IMAGES/robGriffin.jpg"></img>
-        <ul>
-          <li>Statistical Programmer<span class="deskOnly"> at <em>AstraZeneca</em></span></li>
-          <li><em>R</em>, <em>Java</em>, <em>SAS</em>, <!-- <em>Python</em>, <em>C++</em>, --> <em>HTML</em> <!-- <em>JavaScript</em> --> and <em>CSS</em></li>
-          <li>Data science and statistics</li>
-        </ul>
-      </div>
+      <h1>Employment History</h1>
+      <ul class="multiList">
+        <li><strong>Statistical Programmer</strong></li>
+        <div>AstraZeneca, Sweden</div>
+        <div>September 2020 to Present</div>
+
+        <li><strong>Visiting Academic</strong></li>
+        <div>University of Queensland, Australia</div>
+        <div>January 2019 to August 2020</div>
+
+        <li><strong>Postdoctoral Research Fellow</strong></li>
+        <div>Uppsala University, Sweden</div>
+        <div>September 2018 to September 2020</div>      
+
+
+      </ul>
     </div>
 
     <div class="section">
