--- a/indexB.html
+++ b/indexB.html
@@ -73,36 +73,119 @@
         <div>Sep. 2018 to Sep. 2020</div>
       </div>
 
-    <div class="flexCard">
-      <div><strong>Postdoctoral Researcher</strong></div>
-      <div>University of Turku</div>
-      <div>Mar. 2016 to Sep. 2018</div>
+      <div class="flexCard">
+        <div><strong>Postdoctoral Researcher</strong></div>
+        <div>University of Turku</div>
+        <div>Mar. 2016 to Sep. 2018</div>
+      </div>
+
+      <div class="flexCard">
+        <div><strong>PhD Candidate</strong></div>
+        <div>Uppsala University</div>
+        <div>Sep. 2011 to Sep. 2015</div>
+      </div>
+
+      <div class="flexCard">
+        <div><strong>Assistant Manager</strong></div>
+        <div>Falmouth Townhouse</div>
+        <div>Nov. 2010 to Aug. 2011</div>
+      </div>
+
+      <div class="flexCard">
+        <div><strong>Research Assistant</strong></div>
+        <div>University of Exeter</div>
+        <div>Jul. 2008 to Aug. 2011</div>
+      </div>
+
+      <div class="flexCard">
+        <div><strong>Lead Supervisor</strong></div>
+        <div>Harbour View Restaurant</div>
+        <div>Jul. 2008 to Sep. 2010</div>
+      </div>
     </div>
 
-    <div class="flexCard">
-      <div><strong>PhD Candidate</strong></div>
-      <div>Uppsala University</div>
-      <div>Sep. 2011 to Sep. 2015</div>
+    <h1>Education</h1>
+    <div class="flexBox">
+      <div class="flexCard">
+        <div><strong>PhD, Evolutionary Genetics</strong></div>
+        <div>Uppsala University</div>
+        <div>September 2015</div>
+      </div>
+
+      <div class="flexCard">
+        <div><strong>MSc, Evolutionary &amp; Behavioural Ecology</strong></div>
+        <div>University of Exeter</div>
+        <div>Distinction, July 2011</div>
+      </div>
+
+      <div class="flexCard">
+        <div><strong>BSc, Conservation Biology &amp; Ecology</strong></div>
+        <div>University of Exeter</div>
+        <div>2.1 w/Hons., July 2010</div>
+      </div>
     </div>
 
-    <div class="flexCard">
-      <div><strong>Assistant Manager</strong></div>
-      <div>Falmouth Townhouse</div>
-      <div>Nov. 2010 to Aug. 2011</div>
+    <h1>Selected Courses &amp; Trainings</h1>
+    <div class="flexBox">
+      <div class="flexCard">
+        <div><strong>Course Title</strong></div>
+        <div>Provider</div>
+        <div>Date</div>
+      </div>
+
+      <div class="flexCard">
+        <div><strong>Course Title</strong></div>
+        <div>Provider</div>
+        <div>Date</div>
+      </div>
+
+      <div class="flexCard">
+        <div><strong>Course Title</strong></div>
+        <div>Provider</div>
+        <div>Date</div>
+      </div>
+
+      <div class="flexCard">
+        <div><strong>Course Title</strong></div>
+        <div>Provider</div>
+        <div>Date</div>
+      </div>
+
+      <div class="flexCard">
+        <div><strong>Course Title</strong></div>
+        <div>Provider</div>
+        <div>Date</div>
+      </div>
+
+      <div class="flexCard">
+        <div><strong>Course Title</strong></div>
+        <div>Provider</div>
+        <div>Date</div>
+      </div>
+
+      <div class="flexCard">
+        <div><strong>Course Title</strong></div>
+        <div>Provider</div>
+        <div>Date</div>
+      </div>
+
+      <div class="flexCard">
+        <div><strong>Course Title</strong></div>
+        <div>Provider</div>
+        <div>Date</div>
+      </div>
     </div>
 
-    <div class="flexCard">
-      <div><strong>Research Assistant</strong></div>
-      <div>University of Exeter</div>
-      <div>Jul. 2008 to Aug. 2011</div>
-    </div>
+    <h1>Noteworthy Skills and Experiences</h1>
+    <ul class="deskBullets">
+      <li>Experience 1</li>
+      <li>Experience Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 2</li>
+      <li>Experience 3</li>
+      <li>Experience 4</li>
+      <li>Experience 5</li>
+      <li>Experience 6</li>
+    </ul>
 
-    <div class="flexCard">
-      <div><strong>Lead Supervisor</strong></div>
-      <div>Harbour View Restaurant</div>
-      <div>Jul. 2008 to Sep. 2010</div>
-    </div>
-  </div>
   </body>
 
   <script>
