--- a/indexB.html
+++ b/indexB.html
@@ -45,12 +45,27 @@
         <li><em>R</em>, <em>Java</em>, <em>SAS</em>, <em>HTML</em> and <em>CSS</em></li>
         <!-- GOAL: be able to add Python, C++, JavaScript above -->
         <li>Data science and statistics</li>
+        <li>PhD in Evolutionary Genetics</li>
       </ul>
     </div>
 
     <div class="box">
       <h1>Profile</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>
+        I am interested in programming and statistics, interests that stem from
+        a career in academia where I used <em>R</em> on a near daily basis for
+        data processing, visualisation and analysis. In 2020, I decided to put
+        those interests at the center of my career, joining the <em>AstraZeneca
+        Late R&I Biometrics Graduate Program</em> as a Programmer in 2020. I continue
+        to develop my skills as a programmer through work-based training and
+        private study; I am currently learning <em>Java</em>, while <em>Python</em>,
+        <em>JavaScript</em> and <em>C++</em> are all high on my list of priorities.
+      </p>
+
+      <p>Outside of work, I follow and participate in a number of sports including cycling, football, running,
+        cross-country skiing and squash. Most of my free time is spent with my
+        partner and our three small children (Nils, Olof and Sven) enjoying the
+        Swedish countryside.</p>
     </div>
 
     <h1>Work History</h1>
@@ -128,62 +143,32 @@
     <h1>Selected Courses &amp; Trainings</h1>
     <div class="flexBox">
       <div class="flexCard">
-        <div><strong>Course Title</strong></div>
-        <div>Provider</div>
-        <div>Date</div>
+        <div><strong>Ultimate Java</strong></div>
+        <div>Code with Mosh</div>
+        <div>Summer 2021</div>
       </div>
 
       <div class="flexCard">
-        <div><strong>Course Title</strong></div>
-        <div>Provider</div>
-        <div>Date</div>
+        <div><strong>R and Tidyverse</strong></div>
+        <div>Babraham Bioinformatics</div>
+        <div>Summer 2021</div>
       </div>
 
       <div class="flexCard">
-        <div><strong>Course Title</strong></div>
-        <div>Provider</div>
-        <div>Date</div>
+        <div><strong>Base SAS, Macros and SQL</strong></div>
+        <div>Cargill Statistics</div>
+        <div>Winter 2020</div>
       </div>
 
-      <div class="flexCard">
-        <div><strong>Course Title</strong></div>
-        <div>Provider</div>
-        <div>Date</div>
-      </div>
-
-      <div class="flexCard">
-        <div><strong>Course Title</strong></div>
-        <div>Provider</div>
-        <div>Date</div>
-      </div>
-
-      <div class="flexCard">
-        <div><strong>Course Title</strong></div>
-        <div>Provider</div>
-        <div>Date</div>
-      </div>
-
-      <div class="flexCard">
-        <div><strong>Course Title</strong></div>
-        <div>Provider</div>
-        <div>Date</div>
-      </div>
-
-      <div class="flexCard">
-        <div><strong>Course Title</strong></div>
-        <div>Provider</div>
-        <div>Date</div>
-      </div>
     </div>
 
     <h1>Noteworthy Skills and Experiences</h1>
     <ul class="deskBullets">
-      <li>Experience 1</li>
-      <li>Experience Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 2</li>
-      <li>Experience 3</li>
-      <li>Experience 4</li>
-      <li>Experience 5</li>
-      <li>Experience 6</li>
+      <li>Scientific writing and publication, with eight articles published in peer-reviewed journals</li>
+      <li>Public presentation having presented at multiple large international conferences and as an invitied speaker at universities in Sweden, Germany and the UK</li>
+      <li>Experience in roles of management and leadership, having lead teams in the leisure industry and supervised students and research assistants during my academic career</li>
+      <li>Project planning, leadership and time management skills developed through designing and leading large research projects, securing funding for projects, and balancing study, work and voluntary work during my BSc and MSc degrees</li>
+      <li>Native English speaker and good (spoken) Swedish, plus British and Swedish citizenship</li>
     </ul>
 
   </body>
