--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
     <p>
       <div><strong>Management and leadership</strong></div>
-      <div>During my BSc and MSc degrees I also worked in management and leadership roles within the leisure industry, serving as the lead supervisor at a restaurant for two years and assistant manager at a hotel &amp; bar for a year. I also supervised and trained students and research assistants during my PhD and postdoctoral positions</div>
+      <div>During my BSc and MSc degrees I also worked in management and leadership roles within the leisure industry, serving as the lead supervisor at a restaurant for two years and assistant manager at a hotel &amp; bar for a year. I also supervised and trained students and research assistants during my PhD and postdoctoral positions, and served as the elected representative to PhD students on the department board during my PhD</div>
     </p>
 
     <p>
