--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="box">
       <h1>Profile</h1>
       <p>I first began programming as part of my academic work, using <em>R</em> on a daily-basis for data processing, analysis and visualisation. Programming and the problem solving opportunities it presented increasingly became the aspect of my work I enjoyed the most and, in 2020, I decided to persue a career where this could become my main focus, joining the <em>AstraZeneca Late R&I Biometrics Graduate Program</em>. I continue to develop my programming skills and add to the languages I have learnt through work-based training, private courses and practice in my free time. I am currently taking courses on <em>Java</em> and <em>Python</em>, while <em>JavaScript</em> and <em>C++</em> are both high on my list of priorities. Going forward, I would like to find opportunities within the private sector that allow me to combine programming, my knowledge of statistics and data science and experience in leadership.</p>
-      <p>Outside of work, I follow and participate in a number of sports including cycling, football, running, cross-country skiing and squash. Most of my free time is spent with my partner and our three small children (Nils, Olof and Sven) enjoying the Swedish countryside.</p>
+      <p>Outside of work, I follow and participate in a number of sports including cycling, football, running, cross-country skiing and squash. Most of my free time is spent with my partner and our three small children (Nils, Olof and Sven) enjoying nature around us on the Swedish west coast.</p>
     </div>
 
     <h1>Work History</h1>
