--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
     <p>
       <div><strong>Presentation and communication</strong></div>
-      <div>Throughout my academic career I present at a number of large international conferences, as an invited speaker at universities in Sweden, Germany and the UK, and within internal settings. Presentations included the communication of my own work and leading discussion on other published articles and books</div>
+      <div>Throughout my academic career, I presented at a number of large international conferences, as an invited speaker at universities in Sweden, Germany and the UK, and within internal settings. Presentations included the communication of my own work and leading discussion on other published articles and books</div>
     </p>
 
     <p>
