--- a/index.html
+++ b/index.html
@@ -59,20 +59,28 @@
     <div class="box">
       <h1>Profile</h1>
       <p>
-        I am interested in programming and statistics, interests that stem from
-        a career in academia where I used <em>R</em> on a near daily basis for
-        data processing, visualisation and analysis. In 2020, I decided to put
-        those interests at the center of my career, joining the <em>AstraZeneca
-        Late R&I Biometrics Graduate Program</em> as a Programmer in 2020. I continue
-        to develop my skills as a programmer through work-based training and
-        private study; I am currently learning <em>Java</em>, while <em>Python</em>,
-        <em>JavaScript</em> and <em>C++</em> are all high on my list of priorities.
+        I first began programming as part of my academic work, using <em>R</em>
+        on a daily-basis for data processing, analysis and visualisation.
+        Programming and the problem solving opportunities it presented increasingly
+        became the aspect of my work I enjoyed the most and, in 2020, I decided
+        to persue a career where this could become my main focus, joining the
+        <em>AstraZeneca Late R&I Biometrics Graduate Program</em>. I continue to
+        develop my programming skills and add to the languages I have learnt
+        through work-based training, private courses and practice in my free time.
+        I am currently taking courses on <em>Java</em> and <em>Python</em>,
+        while <em>JavaScript</em> and <em>C++</em> are both high on my list of
+        priorities. Going forward, I would like to find opportunities within the
+        private sector that allow me to combine programming, my knowledge of statistics
+        and data science and experience in leadership.
       </p>
 
-      <p>Outside of work, I follow and participate in a number of sports including cycling, football, running,
-        cross-country skiing and squash. Most of my free time is spent with my
-        partner and our three small children (Nils, Olof and Sven) enjoying the
-        Swedish countryside.</p>
+      <p>
+        Outside of work, I follow and participate in a number of sports including
+        cycling, football, running, cross-country skiing and squash. Most of my
+        free time is spent with my partner and our three small children (Nils,
+        Olof and Sven) enjoying nature around us on the Swedish west coast.
+      </p>
+
     </div>
 
     <h1>Work History</h1>
@@ -189,12 +197,12 @@
 
     <p>
       <div><strong>Presentation and communication</strong></div>
-      <div>Throughout my academic career I present at a number of large international conferences, as an invited speaker at universities in Sweden, Germany and the UK, and within internal settings. Presentations included the communication of my own work and leading discussion on other published articles and books</div>
+      <div>Throughout my academic career, I presented at a number of large international conferences, as an invited speaker at universities in Sweden, Germany and the UK, and within internal settings. Presentations included the communication of my own work and leading discussion on other published articles and books</div>
     </p>
 
     <p>
       <div><strong>Management and leadership</strong></div>
-      <div>During my BSc and MSc degrees I also worked in management and leadership roles within the leisure industry, serving as the lead supervisor at a restaurant for two years and assistant manager at a hotel &amp; bar for a year. I also supervised and trained students and research assistants during my PhD and postdoctoral positions</div>
+      <div>During my BSc and MSc degrees I also worked in management and leadership roles within the leisure industry, serving as the lead supervisor at a restaurant for two years and assistant manager at a hotel &amp; bar for a year. I also supervised and trained students and research assistants during my PhD and postdoctoral positions, and served as the elected representative to PhD students on the department board during my PhD</div>
     </p>
 
     <p>
