--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <img src="IMAGES/robGriffin.jpg" alt="Rob Griffin" class="profile"></img>
       <ul>
         <li>Statistical Programmer<span class="deskOnly"> at <em>AstraZeneca</em></span></li>
-        <li><em>R</em>, <em>Java</em>, <em>SAS</em>, <em>HTML</em> and <em>CSS</em></li>
+        <li><em>R</em>, <em>Java</em>, <em>Kotlin</em>, <em>SAS</em>, <em>HTML</em> and <em>CSS</em></li>
         <!-- GOAL: be able to add Python, C++, JavaScript above -->
         <li>Data science and statistics</li>
         <li>PhD in Evolutionary Genetics</li>
@@ -67,8 +67,8 @@
         <em>AstraZeneca Late R&I Biometrics Graduate Program</em>. I continue to
         develop my programming skills and add to the languages I have learnt
         through work-based training, private courses and practice in my free time.
-        I am currently taking courses on <em>Java</em> and <em>Python</em>,
-        while <em>JavaScript</em> and <em>C++</em> are both high on my list of
+        I am currently taking courses on <em>Java</em> and <em>Kotlin</em> (and Android app development), while <em>Python</em>,
+        <em>JavaScript</em> and <em>C++</em> are both high on my list of
         priorities. Going forward, I would like to find opportunities within the
         private sector that allow me to combine programming, my knowledge of statistics
         and data science and experience in leadership.
@@ -163,12 +163,11 @@
         <div>Summer 2021</div>
       </div>
 
-      <div class="flexBox">
-        <div class="flexCard">
-          <div><strong>Ultimate Java</strong></div>
-          <div>Code with Mosh</div>
-          <div>Summer 2021</div>
-        </div>
+      <div class="flexCard">
+        <div><strong>Ultimate Java</strong></div>
+        <div>Code with Mosh</div>
+        <div>Summer 2021</div>
+      </div>
 
       <div class="flexCard">
         <div><strong>R and Tidyverse</strong></div>
