--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         develop my programming skills and add to the languages I have learnt
         through work-based training, private courses and practice in my free time.
         I am currently taking courses on <em>Java</em> and <em>Kotlin</em> (and Android app development), while <em>Python</em>,
-        <em>JavaScript</em> and <em>C++</em> are both high on my list of
+        <em>JavaScript</em> and <em>C++</em> are all high on my list of
         priorities. Going forward, I would like to find opportunities within the
         private sector that allow me to combine programming, my knowledge of statistics
         and data science and experience in leadership.
