--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <img src="IMAGES/robGriffin.jpg" alt="Rob Griffin" class="profile"></img>
       <ul>
         <li>Statistical Programmer<span class="deskOnly"> at <em>AstraZeneca</em></span></li>
-        <li><em>R</em>, <em>Java</em>, <em>Kotlin</em>, <em>SAS</em>, <em>HTML</em> and <em>CSS</em></li>
+        <li><em>R</em>, <em>Java</em>, <em>Kotlin</em>, <em>SAS</em>, <em>HTML</em>, <em>CSS</em></li>
         <!-- GOAL: be able to add Python, C++, JavaScript above -->
         <li>Data science and statistics</li>
         <li>PhD in Evolutionary Genetics</li>
