--- a/runner.html
+++ b/runner.html
@@ -5,8 +5,8 @@
 </head>
 <style>
   body {
-    width: 94%;
-    margin: 0 auto;
+    margin: 16px auto;
+    background-color: #263f4a;
   }
 </style>
 <body>
