--- a/site_build.html
+++ b/site_build.html
@@ -177,7 +177,7 @@ if (window.hljs) {
   <div id="open-nav" onclick="openNav()">Menu</div>
 </div>
 
-<div id="overlay"></div>
+<div id="overlay" onclick="closeNav()"></div>
 
 
 <h1 class="title toc-ignore">Building GriffinEvo</h1>
